# python-shiny-app-template

./: README.md  pyproject.toml
.github/workflows/: test-conda.yml  test-poetry.yml
conda/: env.yml
src/: Dockerfile  app.py  pyproject.toml
