[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["melany estevez camata <elibialany@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.6.2"
shiny = "^0.2.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
